@@ -474,7 +474,6 @@ Subject length lower bound = 0
 Capture group count = 0
 Compile options: no_start_optimize utf
 Overall options: anchored no_start_optimize utf
-Subject length lower bound = 0
 
 /()()()()()()()()()()
  ()()()()()()()()()()
